--- a/CustomView/app/src/main/AndroidManifest.xml
+++ b/CustomView/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".touchevent.TextActivity" />
         <activity android:name=".viewpager.ViewpagerActivity" />
         <activity android:name=".viewpager.ViewpagerActivity2" />
+        <activity android:name=".calculator.CalculatorActivity" />
     </application>
 
 </manifest>
