--- a/CustomView/mylibrary/src/main/AndroidManifest.xml
+++ b/CustomView/mylibrary/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application>
-        <activity android:name=".ChatActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <activity android:name=".ChatTransActivity"
+            android:theme="@style/Theme.notAnimation"/>
     </application>
 </manifest>
