添加仿微信发送语音

--- a/CustomView/app/build.gradle
+++ b/CustomView/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
