--- a/CustomView/app/build.gradle
+++ b/CustomView/app/build.gradle
@@ -36,6 +36,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
 
+    implementation 'skin.support:skin-support:3.1.4'                   // skin-support 基础控件支持
+    implementation 'skin.support:skin-support-design:3.1.4'            // skin-support-design material design 控件支持[可选]
+    implementation 'skin.support:skin-support-cardview:3.1.4'          // skin-support-cardview CardView 控件支持[可选]
+    implementation 'skin.support:skin-support-constraint-layout:3.1.4' // skin-support-constraint-layout ConstraintLayout 控件支持[可选]
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
