--- a/CustomView/app/src/main/AndroidManifest.xml
+++ b/CustomView/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
@@ -16,7 +17,6 @@
         android:roundIcon="@mipmap/ic_app"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:name=".App"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -27,12 +27,16 @@
         </activity>
         <activity android:name=".touchevent.DispatchActivity" />
         <activity android:name=".touchevent.TextActivity" />
-        <activity android:name=".viewpager.InfiniteVPActivity" />
-        <activity android:name=".viewpager.InfiniteVPActivity2" />
+        <activity android:name=".viewpager.ViewPagerActivity" />
+        <activity android:name=".viewpager.VPFragmentActivity" />
+        <activity android:name=".viewpager.VPInfiniteActivity" />
+        <activity android:name=".viewpager.VPInfiniteActivity2" />
         <activity android:name=".calculator.CalculatorActivity" />
         <activity android:name=".view.StyleActivity" />
         <activity android:name=".recorder.RecorderActivity" />
         <activity android:name=".skin.ZipActivity" />
+        <activity android:name=".view.ViewActivity" />
+        <activity android:name=".view.CanvasActivity" />
         <activity
             android:name=".activitypart.PartActivity"
             android:screenOrientation="landscape"
