--- a/CustomView/app/build.gradle
+++ b/CustomView/app/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     implementation 'skin.support:skin-support:3.1.4'                   // skin-support 基础控件支持
     implementation 'skin.support:skin-support-design:3.1.4'            // skin-support-design material design 控件支持[可选]
     implementation 'skin.support:skin-support-cardview:3.1.4'          // skin-support-cardview CardView 控件支持[可选]
-    implementation 'skin.support:skin-support-constraint-layout:3.1.4' // skin-support-constraint-layout ConstraintLayout 控件支持[可选]
+    implementation 'skin.support:skin-support-constraint-layout:3.1.4'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+// skin-support-constraint-layout ConstraintLayout 控件支持[可选]
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
