--- a/CustomView/app/src/main/AndroidManifest.xml
+++ b/CustomView/app/src/main/AndroidManifest.xml
@@ -37,7 +37,10 @@
         <activity android:name=".skin.ZipActivity" />
         <activity android:name=".view.ViewActivity" />
         <activity android:name=".view.CanvasActivity" />
-        <activity android:name=".coordinatorlayout.BehaviorActivity" />
+        <activity android:name=".materialdesign.behavior.BehaviorActivity" />
+        <activity android:name=".materialdesign.bottomsheet.BottomSheetActivity" />
+        <activity android:name=".materialdesign.bottomsheet.BottomSheetActivity2" />
+        <activity android:name=".materialdesign.behavior.GaodeBottomSheetActivity" />
         <activity
             android:name=".activitypart.PartActivity"
             android:screenOrientation="landscape"
