--- a/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/AndroidUI/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".material.behavior3.SetCarLocationActivity" />
         <activity android:name=".material.bottomsheet.BottomSheetActivity" />
         <activity android:name=".material.bottomsheet2.BottomSheetActivity2" />
+        <activity android:name=".nestedscroll.NestedScrollActivity" />
         <activity
             android:name=".activitypart.PartActivity"
             android:screenOrientation="landscape"
