--- a/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/AndroidUI/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         <activity android:name=".path.flower.PathMeasureFlowerActivity" />
         <activity android:name=".path.progress.PathMeasureProgressActivity" />
         <activity android:name=".path.waterwave.PathWaterWaveActivity" />
+        <activity android:name=".design.CollapseActivity" />
+
         <activity
             android:name=".activitypart.PartActivity"
             android:screenOrientation="landscape"
