feat: 增加TabLayout的使用

--- a/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/AndroidUI/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".path.progress.PathMeasureProgressActivity" />
         <activity android:name=".path.waterwave.PathWaterWaveActivity" />
         <activity android:name=".design.CollapseActivity" />
+        <activity android:name=".design.tablayout.TabLayoutActivity" />
 
         <activity
             android:name=".activitypart.PartActivity"
