feat: 增加三种自定义View类型

--- a/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/AndroidUI/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".path.waterwave.PathWaterWaveActivity" />
         <activity android:name=".design.CollapseActivity" />
         <activity android:name=".design.tablayout.TabLayoutActivity" />
+        <activity android:name=".view.CustomActivity" />
 
         <activity
             android:name=".activitypart.PartActivity"
