--- a/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/AndroidUI/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name="com.android.ui.design.CollapseActivity" />
         <activity android:name="com.android.ui.design.tablayout.TabLayoutActivity" />
         <activity android:name="com.android.ui.view.CustomActivity" />
+        <activity android:name=".design.tablayout.custom.CustomTabActivity" />
 
         <activity
             android:name="com.android.ui.activity.PartActivity"
