refactor(Behavior): 优化

--- a/AndroidUI/app/src/main/AndroidManifest.xml
+++ b/AndroidUI/app/src/main/AndroidManifest.xml
@@ -37,18 +37,19 @@
         <activity android:name="com.android.ui.skin.ZipActivity" />
         <activity android:name="com.android.ui.view.ViewActivity" />
         <activity android:name="com.android.ui.view.CanvasActivity" />
-        <activity android:name="com.android.ui.view.textview.StrokeTextViewActivity" />
-        <activity android:name="com.android.ui.material.behavior.BehaviorActivity" />
+        <activity android:name="com.android.ui.view.textview.TextViewActivity" />
+        <activity android:name="com.android.ui.material.BehaviorActivity" />
+        <activity android:name="com.android.ui.material.behavior.HeaderBehaviorActivity" />
         <activity android:name="com.android.ui.material.behavior2.GaodeBottomSheetActivity" />
         <activity android:name="com.android.ui.material.behavior3.SetCarLocationActivity" />
-        <activity android:name="com.android.ui.material.bottomsheet.BottomSheetActivity" />
-        <activity android:name="com.android.ui.material.bottomsheet2.BottomSheetActivity2" />
+        <activity android:name="com.android.ui.material.bottomsheet.BottomSheetDialogActivity" />
+        <activity android:name="com.android.ui.material.bottomsheet2.BottomSheetDialogActivity2" />
         <activity android:name="com.android.ui.nestedscroll.NestedScrollActivity" />
         <activity android:name="com.android.ui.path.PathActivity" />
         <activity android:name="com.android.ui.path.flower.PathMeasureFlowerActivity" />
         <activity android:name="com.android.ui.path.progress.PathMeasureProgressActivity" />
         <activity android:name="com.android.ui.path.waterwave.PathWaterWaveActivity" />
-        <activity android:name="com.android.ui.design.CollapseActivity" />
+        <activity android:name="com.android.ui.design.collapse.CollapseActivity" />
         <activity android:name="com.android.ui.design.tablayout.TabLayoutActivity" />
         <activity android:name="com.android.ui.view.CustomActivity" />
         <activity android:name=".design.tablayout.custom.CustomTabActivity" />
