--- a/AndroidUI/build.gradle
+++ b/AndroidUI/build.gradle
@@ -3,6 +3,10 @@
 buildscript {
     ext.kotlin_version = '1.4.32'
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }//jcenter
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }//gradle-plugin
+        maven { url 'https://maven.aliyun.com/repository/central' }//central
+        maven { url 'https://maven.aliyun.com/repository/google' }//google
         google()
         jcenter()
         mavenCentral()
@@ -18,6 +22,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }//jcenter
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }//gradle-plugin
+        maven { url 'https://maven.aliyun.com/repository/central' }//central
+        maven { url 'https://maven.aliyun.com/repository/google' }//google
         google()
         jcenter()
         mavenCentral()
